<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".Activities.UserInfoActivity"
    tools:deviceIds="wear">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppearance.ActivityTracker.TextInputLayout.HintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_info"
            android:paddingTop="15dp"
            android:textAlignment="center"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#9E9E9E"/>

        <Switch
            android:id="@+id/user_units"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_unit_metric"
            android:textColor="@color/white"
            android:checked="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#9E9E9E"/>

        <Switch
            android:id="@+id/user_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_gender_male"
            android:textColor="@color/white"
            android:checked="true"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#9E9E9E"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_age"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_age"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_height_metric"
            android:id="@+id/user_height_metric_layout"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_height_metric"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_height_imperial_ft"
            android:id="@+id/user_height_imperial_ft_layout"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_height_imperial_ft"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_height_imperial_in"
            android:id="@+id/user_height_imperial_in_layout"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_height_imperial_in"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_weight_metric"
            android:id="@+id/user_weight_metric_layout"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_weight_metric"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_weight_imperial"
            android:id="@+id/user_weight_imperial_layout"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_weight_imperial"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_min_heart_rate"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_min_heart_rate"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_max_heart_rate"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_max_heart_rate"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.ActivityTracker.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_emergency_number"
            android:layout_weight="1">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_emergency_number"
                android:inputType="numberDecimal"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.ActivityTracker.Button.TextButton"
            android:id="@+id/save_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_info"
            android:layout_marginBottom="50dp"/>

    </LinearLayout>

</ScrollView>